Added images and improved layouts to my page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <header>
         <nav>
             <h1 id="name">Andrew Doherty</h1>
-            <ul id="nav">
-                <li id="nav">About</li>
-                <li id="nav">Portfolio</li>
-                <li id="nav">Contact</li>
-            </ul>
+               <a href="#" id="nav">About</a>
+               <a href="#" id="nav">Portfolio</a>
+               <a href="#" id="nav">Contact</a>
         </nav>
     </header>
 
@@ -27,30 +25,42 @@
     <main>
 
         <section>
-        <h1>Junior Software Developer</h1>
+        <h1 id="mainheader">Junior Software Developer.</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
 
         <section>
-            <h1>PORTFOLIO</h1>
+            <h1 id="portfolio">PORTFOLIO</h1>
             <ul>
-                <li>Project 1</li>
-                <li>Project 2</li>
-                <li>Project 3</li>
-                <li>Project 4</li>
-                <li>Project 5</li>
-                <li>Project 6</li>
+              <div class="box">Project 1
+                <img src="" alt="">
+              </div>
+              <div class="box">Project 2
+                <img src="" alt="">
+              </div>
+              <div class="box">Project 3
+                <img src="" alt="">
+              </div>
+              <div class="box">Project 4
+                <img src="" alt="">
+              </div>
+              <div class="box">Project 5
+                <img src="" alt="">
+              </div>
+              <div class="box">Project 6
+                <img src="" alt="">
+              </div>
             </ul>
         </section>
 
         <section>
-            <h1>ABOUT.</h1>
-            <img src="" alt="Me">
+            <h1 id="about">ABOUT.</h1>
+            <img class="resize" src="./IMG_7411.JPG" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
             <div id="left list">
-                <h1>Experience</h1>
+                <h1>EXPERIENCE</h1>
                     <ul class="experience">
                         <li>Trainee Software Developer @ _Nology</li>
                         <li>Mac Genius @ Apple Inc.</li>
@@ -59,7 +69,7 @@
             </div>
 
             <div id="right list">
-                <h1>Interests</h1>
+                <h1>INTERESTS</h1>
                     <ul class="interests">
                         <li>Hiking</li>
                         <li>Boxing</li>
@@ -69,8 +79,8 @@
         </section>
 
         <section>
-            <h1>Get In Touch.</h1>
-
+            <h1 id="get-in-touch">Get In Touch.</h1>
+            <a href="#" class="button">Contact</a>
         </section>
 
     
