Resized image and text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Intro  -->
     <header>
         <nav>
-            <h1 id="name">Andrew Doherty</h1>
+            <h1 id="name">Andrew <span>Doherty</span></h1>
                <a href="#" id="nav">About</a>
                <a href="#" id="nav">Portfolio</a>
                <a href="#" id="nav">Contact</a>
@@ -79,8 +79,10 @@
         </section>
 
         <section>
-            <h1 id="get-in-touch">Get In Touch.</h1>
-            <a href="#" class="button">Contact</a>
+            <div>
+                <h1 id="get-in-touch">Get In Touch.</h1>
+                <a1 id="contact-button" href="#" class="button">Contact</a1>
+            </div>
         </section>
 
     
