Added box classes for projects

--- a/index.html
+++ b/index.html
@@ -31,26 +31,42 @@
 
         <section>
             <h1 id="portfolio">PORTFOLIO</h1>
-            <ul>
-              <div class="box">Project 1
-                <img src="" alt="">
+              <div>
+                <h2 class="box" >PROJECT 1</h2>
+                <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
+                <a id="ProjectButtons" href="#">REACT</a>
+                <a id="ProjectButtons" href="#">SCSS</a>
               </div>
-              <div class="box">Project 2
-                <img src="" alt="">
+              <div>
+                <h2 class="box" >PROJECT 2</h2>
+                <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
+                <a id="ProjectButtons" href="#">REACT</a>
+                <a id="ProjectButtons" href="#">SCSS</a>
               </div>
-              <div class="box">Project 3
-                <img src="" alt="">
+              <div>
+                <h2 class="box" >PROJECT 3</h2>
+                <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
+                <a id="ProjectButtons" href="#">REACT</a>
+                <a id="ProjectButtons" href="#">SCSS</a>
               </div>
-              <div class="box">Project 4
-                <img src="" alt="">
+              <div>
+                <h2 class="box" >PROJECT 4</h2>
+                <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
+                <a id="ProjectButtons" href="#">REACT</a>
+                <a id="ProjectButtons" href="#">SCSS</a>
               </div>
-              <div class="box">Project 5
-                <img src="" alt="">
+              <div>
+                <h2 class="box">PROJECT 5</h2>
+                <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
+                <a id="ProjectButtons" href="#">REACT</a>
+                <a id="ProjectButtons" href="#">SCSS</a>
               </div>
-              <div class="box">Project 6
-                <img src="" alt="">
+              <div>
+                <h2 class="box" >PROJECT 6</h2>
+                <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
+                <a id="ProjectButtons" href="#">REACT</a>
+                <a id="ProjectButtons" href="#">SCSS</a>
               </div>
-            </ul>
         </section>
 
         <section>
@@ -81,17 +97,19 @@
         <section>
             <div>
                 <h1 id="get-in-touch">Get In Touch.</h1>
-                <a1 id="contact-button" href="#" class="button">Contact</a1>
+                <a1 href="#" class="button">Contact</a1>
             </div>
         </section>
 
+        <section>
+            <footer>
+                <img src="./Rectangle 9.png" alt="LinkedIn">
+                <img src="./Rectangle 9.png" alt="Github">
+                <img src="./Rectangle 9.png" alt="CV">
+             </footer>
+    </section>
     
     </main>
-
-    <footer>
-        <img src="" alt="LinkedIn">
-        <img src="" alt="Github">
-        <img src="" alt="CV">
-    </footer>
+    
 </body>
 </html>
