--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
         </section>
 
         <section>
-            <h1 id="about">ABOUT.</h1>
+            <h1  id="about">ABOUT.</h1>
             <img class="resize" src="./IMG_7411.JPG" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-            <div id="left list">
+            <div class="float container">
+            <div class="float-child left" id="left list">
                 <h1>EXPERIENCE</h1>
                     <ul class="experience">
                         <li>Trainee Software Developer @ _Nology</li>
@@ -83,14 +84,15 @@
                         <li>Apple Media Products Quality Assurance @ Apple Inc. </li>
                     </ul>
             </div>
-
-            <div id="right list">
+            
+            <div class="float-child right" id="right list">
                 <h1>INTERESTS</h1>
                     <ul class="interests">
                         <li>Hiking</li>
                         <li>Boxing</li>
                         <li>Paddle Boarding</li>
                     </ul>
+            </div>
             </div>
         </section>
 
