added flex containers and grid

--- a/index.html
+++ b/index.html
@@ -31,52 +31,56 @@
 
         <section>
             <h1 id="portfolio">PORTFOLIO</h1>
+            <div class="grid-container">
               <div>
-                <h2 class="box" >PROJECT 1</h2>
+                <h2Project1 class="box" >PROJECT 1</h2Project1>
                 <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
               </div>
               <div>
-                <h2 class="box" >PROJECT 2</h2>
+                <h2Project2 class="box" >PROJECT 2</h2Project2>
                 <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
               </div>
               <div>
-                <h2 class="box" >PROJECT 3</h2>
+                <h2Project3 class="box" >PROJECT 3</h2Project3>
                 <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
               </div>
               <div>
-                <h2 class="box" >PROJECT 4</h2>
+                <h2Project4 class="box" >PROJECT 4</h2Project4>
                 <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
               </div>
               <div>
-                <h2 class="box">PROJECT 5</h2>
+                <h2Project5 class="box">PROJECT 5</h2Project5>
                 <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
               </div>
               <div>
-                <h2 class="box" >PROJECT 6</h2>
+                <h2Project6 class="box" >PROJECT 6</h2Project6>
                 <img src="./Rectangle 9.png" alt=""><img src="./Rectangle 9.png" alt="">
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
               </div>
+            </div>
         </section>
 
         <section>
-            <h1  id="about">ABOUT.</h1>
-            <img class="resize" src="./IMG_7411.JPG" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="flex-container2">
+              <h1  id="about">ABOUT.</h1>
+              <img class="resize" src="./IMG_7411.JPG" alt="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
 
-            <div class="float container">
-            <div class="float-child left" id="left list">
+            <div class="flex-container">
+            <div class="flex-child left" id="left list">
                 <h1>EXPERIENCE</h1>
                     <ul class="experience">
                         <li>Trainee Software Developer @ _Nology</li>
@@ -85,7 +89,7 @@
                     </ul>
             </div>
             
-            <div class="float-child right" id="right list">
+            <div class="flex-child right" id="right list">
                 <h1>INTERESTS</h1>
                     <ul class="interests">
                         <li>Hiking</li>
