Added opacity to clickable items

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 
         <section>
             <footer>
-                <img src="./Vector (1).png" alt="">
-                <img src="./Vector (2).png" alt="">
-                <img src="./Vector.png" alt="">
+                <img class="footer_image" src="./Vector (1).png" alt="">
+                <img class="footer_image" src="./Vector (2).png" alt="">
+                <img class="footer_image" src="./Vector.png" alt="">
              </footer>
     </section>
     
