added a tags and links to footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Inter:wght@100&family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <!-- Nav  -->
     <header>
         <nav>
@@ -145,9 +146,9 @@
 
     <section>
       <footer>
-          <img class="footer_image" src="./Vector (1).png" alt="">
-          <img class="footer_image" src="./Vector (2).png" alt="">
-          <img class="footer_image" src="./Vector.png" alt="">
+          <a href="https://github.com/andrewdohertyy"> <img src="./Vector (1).png" alt=""></a>
+          <a href="https://github.com/andrewdohertyy"> <img src="./Vector (2).png" alt=""></a>
+          <a href="https://www.linkedin.com/in/andrew-doherty-054781a1/"> <img src="./Vector.png" alt=""></a>
        </footer>
     </section>
 
