re organised file structure

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             <div class="grid-container">
 
               <div class="content-flex">
-                <img src="./Rectangle 2.png" alt="">
+                <img src="./Images/Rectangle 2.png" alt="">
                 <h2Project1 class="box" >PROJECT 1</h2Project1>
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
               </div>
 
               <div class="content-flex">
-                <img src="./Rectangle 2.png" alt="">
+                <img src="./Images/Rectangle 2.png" alt="">
                 <h2Project2 class="box" >PROJECT 2</h2Project2>
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
@@ -56,7 +56,7 @@
               </div>
 
               <div class="content-flex">
-                <img src="./Rectangle 2.png" alt="">
+                <img src="./Images/Rectangle 2.png" alt="">
                 <h2Project3 class="box" >PROJECT 3</h2Project3>
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
@@ -64,7 +64,7 @@
               </div>
 
               <div class="content-flex">
-                <img src="./Rectangle 2.png" alt="">
+                <img src="./Images/Rectangle 2.png" alt="">
                 <h2Project4 class="box" >PROJECT 4</h2Project4>
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
@@ -72,7 +72,7 @@
               </div>
 
               <div class="content-flex">
-                <img src="./Rectangle 2.png" alt="">
+                <img src="./Images/Rectangle 2.png" alt="">
                 <h2Project5 class="box">PROJECT 5</h2Project5>
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
@@ -80,7 +80,7 @@
               </div>
 
               <div class="content-flex">
-                <img src="./Rectangle 2.png" alt="">
+                <img src="./Images/Rectangle 2.png" alt="">
                 <h2Project6 class="box" >PROJECT 6</h2Project6>
                 <a id="ProjectButtons" href="#">REACT</a>
                 <a id="ProjectButtons" href="#">SCSS</a>
@@ -102,7 +102,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
             </div>
             <div class="rightside">
-                <img class="resize" src="./IMG_7411.JPG" alt="">
+                <img class="resize" src="./Images/IMG_7411.JPG" alt="">
             </div>
           </div>
 
@@ -146,9 +146,9 @@
 
     <section>
       <footer>
-          <a href="https://github.com/andrewdohertyy"> <img src="./Vector (1).png" alt=""></a>
-          <a href="https://github.com/andrewdohertyy"> <img src="./Vector (2).png" alt=""></a>
-          <a href="https://www.linkedin.com/in/andrew-doherty-054781a1/"> <img src="./Vector.png" alt=""></a>
+          <a href="https://github.com/andrewdohertyy"> <img src="./Images/Vector (1).png" alt=""></a>
+          <a href="https://github.com/andrewdohertyy"> <img src="./Images/Vector (2).png" alt=""></a>
+          <a href="https://www.linkedin.com/in/andrew-doherty-054781a1/"> <img src="./Images/Vector.png" alt=""></a>
        </footer>
     </section>
 
