changes to header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- Nav  -->
-    <header>
+    <header class="header">
         <nav>
             <h1 id="name">Andrew <span>Doherty</span></h1>
                <a href="#" id="nav">About</a>
