created scss files

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 <body>
 
     <!-- Nav  -->
-    <header class="header">
-        <nav>
-            <h1 id="name">Andrew <span>Doherty</span></h1>
-               <a href="#" id="nav">About</a>
-               <a href="#" id="nav">Portfolio</a>
-               <a href="#" id="nav">Contact</a>
-        </nav>
-    </header>
+    
+    <header class="heading">
+      <nav class="heading__links">
+          <h1 class="heading__name" id="name">Andrew <span>Doherty</span></h1>
+             <a class="heading__link" href="#" id="nav">About</a>
+             <a class="heading__link" href="#" id="nav">Portfolio</a>
+             <a class="heading__link" href="#" id="nav">Contact</a>
+      </nav>
+  </header>
 
     <!--Intro & Main-->
     
