--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
         <!--End of main content and footer-->
 
     <section>
-      <footer>
-          <a href="https://github.com/andrewdohertyy"> <img src="./Images/Vector (1).png" alt=""></a>
-          <a href="https://github.com/andrewdohertyy"> <img src="./Images/Vector (2).png" alt=""></a>
-          <a href="https://www.linkedin.com/in/andrew-doherty-054781a1/"> <img src="./Images/Vector.png" alt=""></a>
+      <footer class="footer">
+          <a class="footer__link" href="https://github.com/andrewdohertyy"> <img src="./Images/Vector (1).png" alt=""></a>
+          <a class="footer__link" href="https://github.com/andrewdohertyy"> <img src="./Images/Vector (2).png" alt=""></a>
+          <a class="footer__link" href="https://www.linkedin.com/in/andrew-doherty-054781a1/"> <img src="./Images/Vector.png" alt=""></a>
        </footer>
     </section>
 
