--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
         <section>
-            <h1 id="portfolio">PORTFOLIO</h1>
+            <h1 class="portfolio">PORTFOLIO</h1>
 
             <div class="grid-container">
 
@@ -96,14 +96,14 @@
 
 
         <section>
-          <div class="flex-container2">
-            <div class="leftside">
-                <h1  id="about">ABOUT.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
+          <div class="about-container">
+            <div class="about-container__leftside">
+                <h1 class="about-container__about" >ABOUT.</h1>
+                <p class="about-container__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
+                <p class="about-container__p" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
             </div>
             <div class="rightside">
-                <img class="resize" src="./Images/IMG_7411.JPG" alt="">
+                <img class="rightside__resize" src="./Images/IMG_7411.JPG" alt="">
             </div>
           </div>
 
@@ -135,8 +135,8 @@
 
       
         <section>
-            <div>
-                <h1 id="get-in-touch">Get In Touch.</h1>
+            <div class="contact">
+                <h1 class="contact__h1">Get In Touch.</h1>
                 <a href="#" class="button">Contact</a>
             </div>
         </section>
