updates with bem and sass

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 <p class="about-container__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
                 <p class="about-container__p" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
             </div>
-            <div class="rightside">
-                <img class="rightside__resize" src="./Images/IMG_7411.JPG" alt="">
+            <div class="about-container__rightside">
+                <img class="about-container__resize" src="./Images/IMG_7411.JPG" alt="">
             </div>
           </div>
 
