refactored to sass and bem

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.scss">
     <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Inter:wght@100&family=Playfair+Display&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
     
     <header class="heading">
       <nav class="heading__links">
-          <h1 class="heading__name" id="name">Andrew <span>Doherty</span></h1>
+          <h1 class="heading__name" id="name">Andrew <span class="heading__span">Doherty</span></h1>
              <a class="heading__link" href="#" id="nav">About</a>
              <a class="heading__link" href="#" id="nav">Portfolio</a>
              <a class="heading__link" href="#" id="nav">Contact</a>
