working with styles

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
                 <p class="about-container__p" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
             </div>
             <div class="about-container__rightside">
-                <img class="resize" src="./Images/IMG_7411.JPG" alt="">
+                <img class="about-container__resize" src="./Images/IMG_7411.JPG" alt="">
             </div>
           </div>
 
             <div class="flex">
-            <div class="flex__left" id="left list">
+            <div class="flex__left">
                 <h1>EXPERIENCE</h1>
                     <ul class="experience">
                         <li>Trainee Software Developer @ _Nology</li>
@@ -118,7 +118,7 @@
                     </ul>
             </div>
             
-            <div class="flex__right" id="right list">
+            <div class="flex__right">
                 <h1>INTERESTS</h1>
                     <ul class="interests">
                         <li>Travelling, Food & Coffee</li>
