compiled scss and using live

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             <div class="grid-container">
 
               <div class="content-flex">
-                <img src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
                 <h2Project1 class="box" >PROJECT 1</h2Project1>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
               </div>
 
               <div class="content-flex">
-                <img src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
                 <h2Project2 class="box" >PROJECT 2</h2Project2>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
@@ -57,7 +57,7 @@
               </div>
 
               <div class="content-flex">
-                <img src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
                 <h2Project3 class="box" >PROJECT 3</h2Project3>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
@@ -65,7 +65,7 @@
               </div>
 
               <div class="content-flex">
-                <img src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
                 <h2Project4 class="box" >PROJECT 4</h2Project4>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
@@ -73,7 +73,7 @@
               </div>
 
               <div class="content-flex">
-                <img src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
                 <h2Project5 class="box">PROJECT 5</h2Project5>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
@@ -81,7 +81,7 @@
               </div>
 
               <div class="content-flex">
-                <img src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
                 <h2Project6 class="box" >PROJECT 6</h2Project6>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
