refactored code on the portfolio

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section>
             <h1 class="portfolio">PORTFOLIO</h1>
 
-            <div class="grid-container">
+            <div class="portfolio-section">
 
               <div class="content-flex">
                 <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
