--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header class="heading">
       <nav class="heading__links">
           <h1 class="heading__name" id="name">Andrew <span class="heading__span">Doherty</span></h1>
-             <a class="heading__link" href="#" id="nav">About</a>
-             <a class="heading__link" href="#" id="nav">Portfolio</a>
-             <a class="heading__link" href="#" id="nav">Contact</a>
+             <a class="heading__link" href= "#about" id="nav">About</a>
+             <a class="heading__link" href="#porfolio" id="nav">Portfolio</a>
+             <a class="heading__link" href="#contact" id="nav">Contact</a>
       </nav>
   </header>
 
@@ -38,7 +38,7 @@
         <section>
             <h1 class="portfolio">PORTFOLIO</h1>
 
-            <div class="portfolio-section">
+            <div id="portfolio" class="portfolio-section">
 
               <div class="content-flex">
                 <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
@@ -95,7 +95,7 @@
 
 
         <section>
-          <div class="about-container">
+          <div id="about" class="about-container">
             <div class="about-container__leftside">
                 <h1 class="about-container__about" >ABOUT.</h1>
                 <p class="about-container__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</p>
@@ -134,9 +134,9 @@
 
       
         <section>
-            <div class="contact">
+            <div id="contact" class="contact">
                 <h1 class="contact__h1">Get In Touch.</h1>
-                <a href="#" class="contact__button">Contact</a>
+                <a href="mailto:andrewdoherty1996@hotmail.co.uk" target="_blank" class="contact__button">Contact</a>
             </div>
         </section>
     
@@ -146,9 +146,9 @@
 
     <section>
       <footer class="footer">
-          <a class="footer__link" href="https://github.com/andrewdohertyy"> <img src="./Images/Vector (1).png" alt=""></a>
-          <a class="footer__link" href="https://github.com/andrewdohertyy"> <img src="./Images/Vector (2).png" alt=""></a>
-          <a class="footer__link" href="https://www.linkedin.com/in/andrew-doherty-054781a1/"> <img src="./Images/Vector.png" alt=""></a>
+          <a class="footer__link" href="https://github.com/andrewdohertyy" target="_blank"> <img src="./Images/Vector (1).png" alt=""></a>
+          <a class="footer__link" href="https://github.com/andrewdohertyy"  target="_blank"> <img src="./Images/Vector (2).png" alt=""></a>
+          <a class="footer__link" href="https://www.linkedin.com/in/andrew-doherty-054781a1/"  target="_blank"> <img src="./Images/Vector.png" alt=""></a>
        </footer>
     </section>
 
