made collapsable lists

--- a/index.html
+++ b/index.html
@@ -110,20 +110,44 @@
             <div class="flex__left">
                 <h1>EXPERIENCE</h1>
                     <ul class="experience">
-                        <li>Trainee Software Developer @ _Nology</li>
-                        <li>Mac Genius @ Apple Inc.</li>
-                        <li>Apple Media Products Quality Assurance @ Apple Inc. </li>
-                        <li>Technical Expert & AppleCare Advisor @ Apple Inc.</li>
+                      <details>
+                        <summary>Trainee Software Developer @ _Nology</summary>
+                        <p class="flex__sub-text">add some text to me</p>
+                      </details>
+                      <details>
+                        <summary>Mac Genius @ Apple Inc.</summary>
+                        <p class="flex__sub-text">add some text to me</p>
+                      </details>
+                      <details>
+                        <summary>Apple Media Products Quality Assurance @ Apple Inc.</summary>
+                        <p class="flex__sub-text">add some text to me</p>
+                      </details>
+                      <details>
+                        <summary>Technical Expert & AppleCare Advisor @ Apple Inc.</summary>
+                        <p class="flex__sub-text">add some text to me</p>
+                      </details>
                     </ul>
             </div>
             
             <div class="flex__right">
                 <h1>INTERESTS</h1>
                     <ul class="interests">
-                        <li>Travelling, Food & Coffee</li>
-                        <li>Snowboarding, Boxing & Football</li>
-                        <li>Watch Collector & Enthusiast</li>
-                        <li>Paddle Boarding, Hiking & Anything Outdoors!</li>
+                      <details>
+                        <summary>Travelling, Food & Coffee</summary>
+                        <p class="flex__sub-text">add some text to me</p>
+                      </details>
+                      <details>
+                        <summary>Snowboarding, Boxing & Football</summary>
+                        <p class="flex__sub-text">add some text to me</p>
+                      </details>
+                      <details>
+                        <summary>Watch Collector & Enthusiast</summary>
+                        <p class="flex__sub-text">add some text to me</p>
+                      </details>
+                      <details>
+                        <summary>Paddle Boarding, Hiking & Anything Outdoors!</summary>
+                        <p class="flex__sub-text">add some text to me</p>
+                      </details>
                     </ul>
             </div>
             </div>
