changes to text

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <p class="flex__sub-text">add some text to me</p>
                       </details>
                       <details>
-                        <summary>Watch Collector & Enthusiast</summary>
+                        <summary>Watch Collector & Car Enthusiast</summary>
                         <p class="flex__sub-text">add some text to me</p>
                       </details>
                       <details>
