added projects to the image grid

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             <div id="portfolio" class="portfolio-section">
 
               <div class="content-flex">
-                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Screenshot 2022-08-31 at 15.53.22.png" alt="">
                 <h2Project1 class="box" >PROJECT 1</h2Project1>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
               </div>
 
               <div class="content-flex">
-                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Screenshot 2022-08-31 at 16.23.09.png" alt="">
                 <h2Project2 class="box" >PROJECT 2</h2Project2>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
