added images to grid

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </div>
 
               <div class="content-flex">
-                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Screenshot 2022-10-13 at 20.47.44 copy.png" alt="">
                 <h2Project3 class="box" >PROJECT 3</h2Project3>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
@@ -64,7 +64,7 @@
               </div>
 
               <div class="content-flex">
-                <img class="content-flex__image" src="./Images/Rectangle 2.png" alt="">
+                <img class="content-flex__image" src="./Images/Screenshot 2022-10-13 at 20.55.18.png" alt="">
                 <h2Project4 class="box" >PROJECT 4</h2Project4>
                 <a class="ProjectButtons" href="#">REACT</a>
                 <a class="ProjectButtons" href="#">SCSS</a>
