--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <footer class="footer">
           <a class="footer__link" href="https://github.com/andrewdohertyy" target="_blank"> <img src="./Images/Vector (1).png" alt=""></a>
           <!-- <a class="footer__link" href="https://github.com/andrewdohertyy"  target="_blank"> <img src="./Images/Vector (2).png" alt=""></a> -->
-          <a class="footer__link" href="https://www.linkedin.com/in/andrew-doherty-054781a1/"  target="_blank"> <img src="./Images/Vector.png" alt=""></a>
+          <a class="footer__link" href="www.linkedin.com/in/andrew-doherty96"  target="_blank"> <img src="./Images/Vector.png" alt=""></a>
        </footer>
     </section>
 
